fix(navbar): remove username scrollbar

--- a/src/app/components/root/navbar/navbar.component.scss
+++ b/src/app/components/root/navbar/navbar.component.scss
@@ -109,7 +109,10 @@
         .username {
           display: inline-block;
           max-width: 40ex;
+          font-size: 1rem;
+          line-height: 1;
           overflow-x: hidden;
+          overflow-y: hidden;
           text-overflow: ellipsis;
         }
       }
